refactor: 인스턴스의 상수화 및 변수명 통일성 증대